front end update for 2018

--- a/assets/src/scss/base/_base.scss
+++ b/assets/src/scss/base/_base.scss
@@ -1,18 +1,18 @@
-// ============================================================================
-// Base: _base
-// Style Base Elements
-// ============================================================================
+/// ============================================================================
+/// Base: _base
+/// Style Base Elements
+/// ============================================================================
 
-// ============================================================================
-// Variables
-// ============================================================================
+/// ============================================================================
+/// Variables
+/// ============================================================================
 $body-bg-color: $palette-secondary;
 $body-text-color: $palette-paragraph;
 $body-font: $font-family-normal;
 
-// ============================================================================
-// Global Elements
-// ============================================================================
+/// ============================================================================
+/// Global Elements
+/// ============================================================================
 html {
   box-sizing: border-box;
   font-size: $global-font-size;
@@ -24,8 +24,8 @@ body {
   background-color: $body-bg-color;
   font-family: $font-family-normal;
   font-size: $font-size-primary;
+  line-height: computed-lineheight($font-size-primary, 32px);
   color: $body-text-color;
-  line-height: $line-height-base;
   z-index: index($z-stack, site);
 }
 
@@ -59,9 +59,9 @@ pre {
   padding: 0;
 }
 
-// ============================================================================
-// Typography
-// ============================================================================
+/// ============================================================================
+/// Typography
+/// ============================================================================
 h1,
 h2,
 h3,
@@ -71,7 +71,6 @@ h6 {
   margin-top: 0;
   font-family: $font-family-normal;
   font-weight: bold;
-  line-height: $line-height-headings;
   color: $palette-paragraph;
   margin-bottom: rem-calc(15);
 }
@@ -122,9 +121,9 @@ small {
   font-size: $font-size-small;
 }
 
-// ============================================================================
-// Links / Buttons
-// ============================================================================
+/// ============================================================================
+/// Links / Buttons
+/// ============================================================================
 a {
   color: $palette-anchor;
   text-decoration: underline;
@@ -134,9 +133,9 @@ a {
   }
 }
 
-// ============================================================================
-// Form Elemenets
-// ============================================================================
+/// ============================================================================
+/// Form Elemenets
+/// ============================================================================
 label {
   display: block;
   margin: 0;
@@ -145,10 +144,10 @@ label {
 select {
   appearance: none;
   width: 100%;
-  border-radius: 50px;
+  border-radius: 0;
   border: 1px solid rgba($palette-border, 0.1);
   color: $palette-paragraph;
-  font-size: rem-calc(18);
+  font-size: rem-calc(16);
   font-family: inherit;
   padding: rem-calc(13.5 45 13.5 13.5);
   height: auto;
@@ -156,7 +155,6 @@ select {
   background-color: $palette-primary;
   background-image: none;
   background-clip: padding-box;
-  box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
   transition: border-color 200ms ease-in-out;
 
   &:focus {
@@ -170,9 +168,9 @@ select::-ms-expand {
   display: none;
 }
 
-// ============================================================================
-// Highlighting
-// ============================================================================
+/// ============================================================================
+/// Highlighting
+/// ============================================================================
 ::selection {
   @include selection;
 }
@@ -181,10 +179,10 @@ select::-ms-expand {
   @include selection;
 }
 
-// ============================================================================
-// iFrame Responivness
-// ============================================================================
-@include breakpoint(small only) {
+/// ============================================================================
+/// iFrame Responivness
+/// ============================================================================
+@include breakpoint(sm only) {
   iframe {
       width: 100%;
   }
