--- a/assets/src/scss/objects/_site-warnings.scss
+++ b/assets/src/scss/objects/_site-warnings.scss
@@ -1,6 +1,6 @@
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
 // Object: _site-warnings
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
 
 .site-warning {
   background-color: $palette-warning;
