--- a/assets/src/scss/objects/_skip-to-content.scss
+++ b/assets/src/scss/objects/_skip-to-content.scss
@@ -1,7 +1,7 @@
 
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
 // Components: _skip-to-content
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
 
 .skip-to-content {
   @include element-invisible;
