--- a/assets/src/scss/utilities/_helpers.scss
+++ b/assets/src/scss/utilities/_helpers.scss
@@ -5,7 +5,7 @@
 // ============================================================================
 // Accessability
 // ============================================================================
-.u-element-hidden {
+.u-sr-only {
   @include element-invisible;
 }
 
