--- a/assets/src/scss/layout/_row.scss
+++ b/assets/src/scss/layout/_row.scss
@@ -1,16 +1,16 @@
-// - - - - - - - - - - - - - - - - - - - - - - - - -
-// Layout: _row
-// Settings for the Grid Row
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
+/// Layout: _r///
+/// Settings for the Grid Row
+/// ============================================================================
 
-// - - - - - - - - - - - - - - - - - - - - - - - - -
-// Change the behavior of columns defined inside this mixin to use a different column count.
-// @content
-// @param {Number} $columns - Number of columns to use.
-// @param {Boolean} $root [false]
-// If `false`, selectors inside this mixin will nest inside the parent selector.
-// If `true`, selectors will not nest.
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
+/// Change the behavior of columns defined inside this mixin to use a different column count.
+/// @content
+/// @param {Number} $columns - Number of columns to use.
+/// @param {Boolean} $root [false]
+/// If `false`, selectors inside this mixin will nest inside the parent selector.
+/// If `true`, selectors will not nest.
+/// ============================================================================
 @mixin grid-context(
   $columns,
   $root: false
@@ -30,16 +30,16 @@
   $grid-column-count: $old-grid-column-count;
 }
 
-// - - - - - - - - - - - - - - - - - - - - - - - - -
-// Creates a grid row.
-// @content
-// @param {Number} $columns [null] - Column count for this row. `null` will use the default column count.
-// @param {Keywords} $behavior [null]
-//   Modifications to the default grid styles. `nest` indicates the row will be placed inside another row. `collapse` indicates that the columns inside this row will not have padding. `nest collapse` combines both behaviors.
-// @param {Number} $width [$grid-row-width] - Maximum width of the row.
-// @param {Boolean} $cf [true] - Whether or not to include a clearfix.
-// @param {Number} $gutter [$grid-column-gutter] - Gutter to use when inverting margins, in case the row is nested.
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
+/// Creates a grid row.
+/// @content
+/// @param {Number} $columns [null] - Column count for this row. `null` will use the default column count.
+/// @param {Keywords} $behavior [null]
+///   Modifications to the default grid styles. `nest` indicates the row will be placed inside another row. `collapse` indicates that the columns inside this row will not have padding. `nest collapse` combines both behaviors.
+/// @param {Number} $width [$grid-row-width] - Maximum width of the row.
+/// @param {Boolean} $cf [true] - Whether or not to include a clearfix.
+/// @param {Number} $gutter [$grid-column-gutter] - Gutter to use when inverting margins, in case the row is nested.
+/// ============================================================================
 @mixin grid-row(
   $columns: null,
   $behavior: null,
@@ -75,13 +75,13 @@
   }
 }
 
-// - - - - - - - - - - - - - - - - - - - - - - - - -
-// Inverts the margins of a row to nest it inside of a column.
-// @param {Map|null} $gutter [null] - Gutter value to use when inverting the margins. Set to `null` to refer to the responsive gutter settings.
-// - - - - - - - - - - - - - - - - - - - - - - - - -
+/// ============================================================================
+/// Inverts the margins of a row to nest it inside of a column.
+/// @param {Map|null} $gutter [null] - Gutter value to use when inverting the margins. Set to `null` to refer to the responsive gutter settings.
+/// ============================================================================
 @mixin grid-row-nest($gutter: $grid-column-gutter) {
   @if type-of($gutter) == 'number' {
-    $gutter: (small: $gutter);
+    $gutter: (sm: $gutter);
   }
 
   @each $breakpoint, $value in $gutter {
