--- a/assets/src/scss/settings/_unit.scss
+++ b/assets/src/scss/settings/_unit.scss
@@ -1,24 +1,24 @@
-// ============================================================================
-// Tools: _unit
-// Contains a number of functions for calculating font sizes
-// ============================================================================
+/// ============================================================================
+/// Tools: _unit
+/// Contains a number of functions for calculating font sizes
+/// ============================================================================
 $global-font-size: 100% !default;
 
-// ============================================================================
-// Removes the unit (e.g. px, em, rem) from a value, returning the number only.
-// @param {Number} $num - Number to strip unit from.
-// @returns {Number} The same number, sans unit.
-// ============================================================================
+/// ============================================================================
+/// Removes the unit (e.g. px, em, rem) from a value, returning the number only.
+/// @param {Number} $num - Number to strip unit from.
+/// @returns {Number} The same number, sans unit.
+/// ============================================================================
 @function strip-unit($num) {
   @return $num / ($num * 0 + 1);
 }
 
-// ============================================================================
-// Converts one or more pixel values into matching rem values.
-// @param {Number|List} $values - One or more values to convert. Be sure to separate them with spaces and not commas. If you need to convert a comma-separated list, wrap the list in parentheses.
-// @param {Number} $base [null] - The base value to use when calculating the `rem`. If this parameter is `null`, the function will reference the `$base-font-size` variable as the base.
-// @returns {List} A list of converted values.
-// ============================================================================
+/// ============================================================================
+/// Converts one or more pixel values into matching rem values.
+/// @param {Number|List} $values - One or more values to convert. Be sure to separate them with spaces and not commas. If you need to convert a comma-separated list, wrap the list in parentheses.
+/// @param {Number} $base [null] - The base value to use when calculating the `rem`. If this parameter is `null`, the function will reference the `$base-font-size` variable as the base.
+/// @returns {List} A list of converted values.
+/// ============================================================================
 @function rem-calc($values, $base: null) {
   $rem-values: ();
   $count: length($values);
@@ -45,10 +45,10 @@ $global-font-size: 100% !default;
   @return $rem-values;
 }
 
-// ============================================================================
-// Converts a unitless, pixel, or rem value to em, for use in breakpoints.
-// ============================================================================
-@function -zf-bp-to-em($value) {
+/// ============================================================================
+/// Converts a unitless, pixel, or rem value to em, for use in breakpoints.
+/// ============================================================================
+@function -bp-to-em($value) {
   // Pixel and unitless values are converted to rems
   @if unit($value) == 'px' or unitless($value) {
     $value: rem-calc($value, $base: 16px);
@@ -58,15 +58,15 @@ $global-font-size: 100% !default;
   @return strip-unit($value) * 1em;
 }
 
-// ============================================================================
-// Converts a pixel value to matching rem value. 
-// *Any* value passed, regardless of unit, is assumed to be a pixel value. By default, 
-// the base pixel value used to calculate the rem value is taken from the `$global-font-size` variable.
-// @access private
-// @param {Number} $value - Pixel value to convert.
-// @param {Number} $base [null] - Base for pixel conversion.
-// @returns {Number} A number in rems, calculated based on the given value and the base pixel value. rem values are passed through as is.
-// ============================================================================
+/// ============================================================================
+/// Converts a pixel value to matching rem value. 
+/// *Any* value passed, regardless of unit, is assumed to be a pixel value. By default, 
+/// the base pixel value used to calculate the rem value is taken from the `$global-font-size` variable.
+/// @access private
+/// @param {Number} $value - Pixel value to convert.
+/// @param {Number} $base [null] - Base for pixel conversion.
+/// @returns {Number} A number in rems, calculated based on the given value and the base pixel value. rem values are passed through as is.
+/// ============================================================================
 @function -zf-to-rem($value, $base: null) {
   // Check if the value is a number
   @if type-of($value) != 'number' {
